--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="description" content="How much earnings can be made with rollercoin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script data-ad-client="ca-pub-4524839460858750" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="dist/css/style.css">
-    <title>Roller coin calculator</title>
+    <title>Rollercoin Calculator</title>
     <style>
         table {
 	display: table;
@@ -24,7 +25,7 @@ table tr td {
 </head>
 <body>
     <header>
-        <h1>RcCalculator</h1>
+        <h1>Rollercoin calculator</h1>
         <div><form action="https://www.paypal.com/donate" method="post" target="_blank">
             <input type="hidden" name="business" value="NHLF2M884HBSE" />
             <input type="hidden" name="item_name" value="Support the website" />
@@ -101,7 +102,7 @@ table tr td {
 
             <!--Start rollercoin.com code-->
 						<a style='width: 700px; margin-top: 25px;' href="https://rollercoin.com/?r=klam8pwe">
-							<img style='width: 700px;' src="//rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
+							<img style='width: 700px;' src="https://rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
 						</a>
 						<!--End rollercoin.com code-->
 
