--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4PTKL1YSJ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4PTKL1YSJ1');
+</script>
     <meta charset="UTF-8">
     <meta name="description" content="How much earnings can be made with rollercoin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
