--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<!--End rollercoin.com code-->
 
             <!-- tabella dei guadagni -->
-            <h3>Current in development: Guide for RoI. Earnings in the major currencies. A calculator. Contact me for suggestion or mistakes.</h3>
+            <p>Current in development: Guide for RoI. Earnings in the major currencies. A calculator. Contact me for suggestion or mistakes.</p>
             <div class="outputData">
 
                 <div>
