ancora ottimizzazioni seo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Calculate The return of Rollercoin miners cost and earnings from games">
+    <meta name="description" content="Calculate the return of Rollercoin miners cost and earnings from games">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script data-ad-client="ca-pub-4524839460858750" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta id='mobile' name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
@@ -19,8 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="dist/css/style.css">
-    <title>Profit Calculator. 
-        Calculate earnings from miners and Rollercoin games.</title>
+    <title>Rollercoin Profit Calculator.</title>
 
     <style>
         table {
@@ -37,7 +36,7 @@
 </head>
 <body>
     <header>
-        <h1>Rollercoin Calculator</h1>
+        <h1>Rollercoin profit Calculator</h1>
         <div><form action="https://www.paypal.com/donate" method="post" target="_blank">
             <input type="hidden" name="business" value="NHLF2M884HBSE" />
             <input type="hidden" name="item_name" value="Support the website" />
@@ -79,8 +78,8 @@
         
         <div class='instraBanner'>
             <h2>Discover your earning potential with rollercoin.</h2>
-            <p>What is rollercoin? <a href="https://rollercoin.com/?r=klam8pwe">See here how it works</a></p>
-            <p>Enter your 6 digit power in tera hash, use the converter if you don't know how many tera your power corresponds to. then paste the first 6 digits result in the box of your interest and calculate. ATTENTION all the preset values ​​may not correspond to the actual current ones.
+            <p>What is rollercoin? How much can you earn? <a href="https://rollercoin.com/?r=klam8pwe">See here how it works</a></p>
+            <p>Calculate the earnings of all 4 tokens simultaneously. Enter your th/s or your ph/s and the power of the network. ATTENTION all the preset values ​​may not correspond to the actual current ones.
             </p>
         </div>
 
@@ -112,7 +111,7 @@
 						<!--End rollercoin.com code-->
 
             <!-- tabella dei guadagni -->
-            <p>Current in development: Guide for RoI. Earnings in the major currencies. A calculator. Contact me for suggestion or mistakes.</p>
+            <h3>Click the banner above and register to immediately receive 1000 satoshi. Contact me for suggestion or mistakes.</h3>
             <div class="outputData">
 
                 <div>
