modifiche al mobile miglioramenti

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </script>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Calculate the return of Rollercoin miners cost and earnings from games">
+    <meta name="description" content="Roller coin Calculator is a calculator of the 4 main crypto coins available on the rollercoin simulator. Simultaneously!">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script data-ad-client="ca-pub-4524839460858750" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <meta id='mobile' name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
+    <meta id='mobile' name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1.0 user-scalable=no ">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
@@ -36,7 +36,7 @@
 </head>
 <body>
     <header>
-        <h1>Rollercoin profit Calculator</h1>
+        <h1>Rollercoin Calculator</h1>
         <div><form action="https://www.paypal.com/donate" method="post" target="_blank">
             <input type="hidden" name="business" value="NHLF2M884HBSE" />
             <input type="hidden" name="item_name" value="Support the website" />
@@ -92,10 +92,10 @@
                 <div class="ethPower eth"><label for="">ETH Power</label><input type="number" value="500000"></div>
                 <div class="rltPower rlt"><label for="">RLT Power</label><input type="number" value="500000"></div>
 
-                <div class="btcNetPower btc"><label for="">BTC Network Power</label><input type="number" value='6136'></div>
-                <div class="dodgeNetPower dodge"><label for="">DODGE Network Power</label><input type="number" value='11630'></div>
-                <div class="ethNetPower eth"><label for="">ETH Network Power</label><input type="number" value='2344'></div>
-                <div class="rltNetPower rlt"><label for="">RLT Network Power</label><input type="number" value='3824'></div>
+                <div class="btcNetPower btc"><label for="">BTC Network Power</label><input type="number" value='6142'></div>
+                <div class="dodgeNetPower dodge"><label for="">DODGE Network Power</label><input type="number" value='3957'></div>
+                <div class="ethNetPower eth"><label for="">ETH Network Power</label><input type="number" value='3550'></div>
+                <div class="rltNetPower rlt"><label for="">RLT Network Power</label><input type="number" value='5237'></div>
                 
                 <div class="btcBlockReward btc"><label for="">BTC Block Reward</label><input value='0.00030000' type="number"></div>
                 <div class="dodgeBlockReward dodge"><label for="">DODGE Block Reward</label><input value='20' type="number"></div>
@@ -165,7 +165,7 @@
         <h1 class='buttonWhatMine'>What miner should you buy?</h1>
         <h2>Considering the occasional discount bargains, it is always worth waiting for these bonuses to shop.
             Also as regards the limited mines to which priority must always be given. Alternatively
-            ElMonstro and ChupaCabra are the only ones worth buying..</h2>
+            ElMonstro and ChupaCabra are the only ones worth buying.</h2>
         
 
         <table class='convinienceTable'>
