cambiato ads, corretto font

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             </div>
 
             <!--Start rollercoin.com code-->
-						<a id='refereal' style='width: 700px; margin-top: 25px;' href="https://rollercoin.com/?r=klam8pwe">
-							<img id="myBanner" style='width: 700px;' src="https://rollercoin.com/static/img/referral/banners/ref_72890.gif" alt="promo"/>
+						<a id='refereal' style='width: 700px; margin-top: 25px;' target='_blank' href="https://www.coinbase.com/join/farina_v3">
+							<img id="myBanner" style='width: 700px; height: 300px' src="dist/img/promo-coinbase.jpg" alt="promo"/>
 						</a>
 						<!--End rollercoin.com code-->
 
             <!-- tabella dei guadagni -->
-            <h3>Click the banner above and register to immediately receive 1000 satoshi. Contact me for suggestion or mistakes.</h3>
+            <h3>Try Coinbase and get €8 in Bitcoin! And more free crypto!</h3>
             <div class="outputData">
 
                 <div>
